<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.ugp</groupId>
	<artifactId>serialx</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>

	<modules>
		<module>SerialX-json</module>
		<module>SerialX-core</module>
		<module>SerialX-devtools</module>
		<module>SerialX-operators</module>
		<module>SerialX-juss</module>
	</modules>

	<name>SerialX root</name>
	<description>
		Store Java objects into JSON or any format you want! SerialX is
		a powerful lightweight utility library to serialize Java objects
		programmatically via tweakable recursive descent parser for custom
		domain-specific languages!
	</description>
	<url>https://github.com/SimplyProgrammer/Java-SerialX</url>
	<inceptionYear>2020</inceptionYear>

	<licenses>
		<license>
			<name>Custom license</name>
			<url>https://github.com/SimplyProgrammer/Java-SerialX/blob/master/LICENSE</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>SimplyProgrammer</name>
			<email>petko.hupka@gmail.com</email>
			<organization>org.ugp</organization>
			<organizationUrl>https://github.com/SimplyProgrammer/</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/SimplyProgrammer/Java-SerialX.git</connection>
		<developerConnection>scm:git:ssh://github.com:SimplyProgrammer/Java-SerialX.git</developerConnection>
		<url>https://github.com/SimplyProgrammer/</url>
	</scm>

	<distributionManagement>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/SimplyProgrammer/Java-SerialX</url>
		</repository>
	</distributionManagement>

	<properties>
		<java.version>8</java.version>
		<revision>1.3.8</revision> <!-- global lib version -->

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>

		<!-- <project.build.finalName>serialx-${project.artifactId}-${project.version}</project.build.finalName> -->
	</properties>

	<build>
		<!-- <finalName>${project.build.finalName}</finalName> -->

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>

				<configuration>
					<source>${java.version}</source> <!-- this is responsible also for IDE version -->
					<target>${java.version}</target>

					<compilerId>eclipse</compilerId>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.codehaus.plexus</groupId>
						<artifactId>plexus-compiler-eclipse</artifactId>
						<version>2.9.0</version>
					</dependency>
					<dependency> <!-- plexus-compiler-eclipse uses the same version... -->
						<groupId>org.eclipse.jdt</groupId>
						<artifactId>ecj</artifactId>
						<version>3.25.0</version>
					</dependency>
				</dependencies>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.8.0</version>

				<configuration>
					<additionalOptions>-Xdoclint:none</additionalOptions>
					<additionalJOption>-Xdoclint:none</additionalJOption>
				</configuration>

				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.6.0</version>
				
				<executions>
			        <execution>
			          <id>flatten</id>
			          <phase>process-resources</phase>
			          <goals>
			            <goal>flatten</goal>
			          </goals>
			        </execution>
			    </executions>
			</plugin>
		</plugins>
	</build>
</project>